; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_connect_and_read_byte.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_connect_and_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IPV4_LOCALHOST = common dso_local global i32 0, align 4
@INVALID_SOCKET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @connect_and_read_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @connect_and_read_byte(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @IPV4_LOCALHOST, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @net_connect(i32 %6, i32 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @INVALID_SOCKET, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i64, i64* @INVALID_SOCKET, align 8
  store i64 %13, i64* %2, align 8
  br label %24

14:                                               ; preds = %1
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @net_recv(i64 %15, i8* %5, i32 1)
  %17 = icmp ne i32 %16, 1
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @net_close(i64 %19)
  %21 = load i64, i64* @INVALID_SOCKET, align 8
  store i64 %21, i64* %2, align 8
  br label %24

22:                                               ; preds = %14
  %23 = load i64, i64* %4, align 8
  store i64 %23, i64* %2, align 8
  br label %24

24:                                               ; preds = %22, %18, %12
  %25 = load i64, i64* %2, align 8
  ret i64 %25
}

declare dso_local i64 @net_connect(i32, i32) #1

declare dso_local i32 @net_recv(i64, i8*, i32) #1

declare dso_local i32 @net_close(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
